<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="201dp"
        android:layout_height="206dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/anjinglaut" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/button2" />
    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:text="@string/button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        android:text="@string/Right" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="270dp"
        android:backgroundTint="@color/blue"
        android:text="@string/Left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="122dp">

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/blue"
            app:srcCompat="@drawable/panah_kiri" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="15dp"
            android:text="@string/Namadia"
            android:textSize="15dp" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/blue"
            app:srcCompat="@drawable/panah_kanan" />

    </LinearLayout>

</LinearLayout>